--- a/tasks/genetics/genetics.html
+++ b/tasks/genetics/genetics.html
@@ -12,6 +12,7 @@
 
     <!--<link rel="stylesheet" type="text/css" href="rangeslider.css">-->
     <script src="genetics.js"></script>
+    <link rel="stylesheet" type="text/css" href="genetics.css">
     <script>
         var query = location.search.substr(1).trim().split('&');
         var level = 0;
