--- a/tasks/genetics/genetics.html
+++ b/tasks/genetics/genetics.html
@@ -8,6 +8,7 @@
     <script src="../kio_test_box/preloadjs-1.0.0.min.js"></script>
     <script src="../kio_test_box/dces2contest.js"></script>
     <script src="../kio_test_box/kio_api.js"></script>
+    <script src="../kio_test_box/scroll-container.js"></script>
     <link rel="stylesheet" type="text/css" href="../kio_test_box/kio_api.css">
 
     <!--<link rel="stylesheet" type="text/css" href="rangeslider.css">-->
