--- a/tasks/genetics/genetics.html
+++ b/tasks/genetics/genetics.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Test Kio Problem</title>
+    <script src="https://d309knd7es5f10.cloudfront.net/createjs_1.1_min.js"></script>
+    <script src="https://d309knd7es5f10.cloudfront.net/zim_7.js"></script>
     <script src="../kio_test_box/jquery-1.7.2.min.js"></script>
-    <script src="../kio_test_box/easeljs-1.0.0.min.js"></script>
-    <script src="../kio_test_box/preloadjs-1.0.0.min.js"></script>
     <script src="../kio_test_box/dces2contest.js"></script>
     <script src="../kio_test_box/kio_api.js"></script>
-    <script src="../kio_test_box/scroll-container.js"></script>
     <link rel="stylesheet" type="text/css" href="../kio_test_box/kio_api.css">
 
     <!--<link rel="stylesheet" type="text/css" href="rangeslider.css">-->
